--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "jade": "^1.11.0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
