--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "consolidate": "^0.14.5",
     "express": "^4.16.2",
+    "handlebars": "^4.0.10",
     "jade": "^1.11.0",
     "lodash": "^4.17.4"
   },
